--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@better-auth/core": "^1.4.18",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@tanstack/react-query": "^5.90.20",
     "@types/pg": "^8.16.0",
     "better-auth": "^1.4.18",
     "dotenv": "^17.2.3",
@@ -20,7 +21,8 @@
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tsx": "^4.21.0"
+    "tsx": "^4.21.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
